--- a/css/header.css
+++ b/css/header.css
@@ -20,3 +20,10 @@
   #header li a:hover {
     opacity: 0.7;
   }
+
+  .header-position {
+    width: 960px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
