--- a/css/main.css
+++ b/css/main.css
@@ -1,190 +1,75 @@
-@charset "UTF-8";
-
-html {
-  font-size: 100%;
-}
 body {
-  color: #383e45;
-  font-size: 0.9rem;
-}
-a {
-  text-decoration: none;
-}
-img {
-  max-width: 100%;
-}
-li {
-  list-style: none;
-  padding: 5px;
-}
-.site-title {
-  padding: 10px 0;
-}
-.site-title a {
-  display: block;
-}
-.section-title {
-  display: inline-block;
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 60px;
-  border-bottom: solid 1px #383e45;
-}
-.content-title {
-  font-size: 1rem;
-  margin: 10px 0;
-}
-.wrapper {
-  max-width: 960px;
-  margin: 0 auto 100px auto;
-  padding: 0 ;
-  text-align: center;
-}
-
-.wrapper-header {
-  max-width: 960px;
-  margin: 0 auto 100px auto;
-  padding: 0 ;
-  text-align: center;
-}
-
-
-/*-------------------------------------------
-Mainvisual
--------------------------------------------*/
-#mainvisual {
-  margin-bottom: 80px;
-  position:relative;
-}
-
-#mainvisual p {
-  position: absolute;
-  top: 200px;
-  left: 480px;
-  color:white;
-  font-weight: bold;
-  font-size:20px;
-  @media (max-width: 500px) {
-    top: 200px;
-  left: 90px;
-    }
-}
-#mainvisual img {
-  width: 100%;
-  max-width: 1920px;
-  max-height: 400px;
-  object-fit: cover;
-}
-
-/*-------------------------------------------
-About
--------------------------------------------*/
-#about .content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#about img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-right: 30px;
-}
-#about .text {
-  text-align: left;
-}
-
-/*-------------------------------------------
-myworks
--------------------------------------------*/
-
-.wrapper ul {
-  display: flex;
-  justify-content: space-between;
-  width:100%;
-
-}
-.wrapper li {
-  width: 47%;
-    list-style: none;
-    padding: 5px;
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 5px;
-    @media (max-width: 500px) {
-      width:47%;
-      }
-
-
-}
-
-.wrapper2 {
-  max-width: 960px;
-  margin: 0 auto 100px auto;
-  padding: 0 ;
-  text-align: center;
-}
-
-.wrapper2 ul {
-  display: flex; /* flexbox */
-	flex-wrap: wrap; /* 折返し指定 */
-  margin: 0 10px;
-
-}
-.wrapper2 li {
-    width: 32%;
-    background: pink;
-    list-style: none;
-    padding: 5px;
-    border: 1px solid;
-    border-radius: 10px;
-    margin: 5px;
-    @media (max-width: 500px) {
-      width:45%;
-      }
-
-
-}
-
-/*-------------------------------------------
-footer
--------------------------------------------*/
-#footer {
-  font-size: 0.5rem;
-  padding: 10px 0;
-  text-align: center;
-}
-
-/*-------------------------------------------
-SP
--------------------------------------------*/
-@media screen and (max-width: 600px) {
-
-  /*-------------------------------------------
-  Mainvisual
-  -------------------------------------------*/
-  #mainvisual img {
-    height: calc(100vh - 60px);
-  }
-
-  /*-------------------------------------------
-  About
-  -------------------------------------------*/
-  #about .content {
-    flex-direction: column;
-  }
-  #about img {
-    margin-right: 0;
-  }
-
-  /*-------------------------------------------
-  Bicycle
-  -------------------------------------------*/
-  #bicycle ul {
-    flex-direction: column;
-  }
-  #bicycle li {
+    max-width:960px;
     width: 100%;
-    margin-bottom: 30px;
-  }
+    margin: auto;
 }
+main {
+    width:100%;
+    margin: auto;
+}
+section {
+    width: 100%;
+    margin: 50px auto 0;
+}
+
+img {
+    width:100%;
+}
+
+/*section-about*/
+.section-title {
+    text-align: center;
+}
+
+.content{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+ul {
+    display: flex; /* flexbox */
+    flex-wrap: wrap; /* 折返し指定 */
+    margin: 0 auto;
+    width: 100%;
+    padding:0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    opacity:0.5;
+}
+
+h5{
+    margin: 20px auto;
+}
+
+section li {
+    display: inline-block;
+    width:30%;
+    padding: 0;
+    border: 1px solid gray;
+    border-radius: 10px;
+    text-align: center;
+    margin: 10px;
+}
+section p {
+    text-align: left;
+    margin:10px 10px;
+}
+
+.main-visual {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.text-center {
+    text-align: center;
+}
+
