--- a/css/main.css
+++ b/css/main.css
@@ -1,78 +1,71 @@
 body {
-    max-width:960px;
-    width: 100%;
-    margin: auto;
+  max-width: 960px;
+  width: 100%;
+  margin: auto;
 }
 main {
-    width:100%;
-    margin: auto;
+  width: 100%;
+  margin: auto;
 }
 section {
-    width: 100%;
-    margin: 50px auto 0;
+  width: 100%;
+  margin: 50px auto 0;
 }
-
 img {
-    width:100%;
+  width: 100%;
 }
 
 /*section-about*/
 .section-title {
-    text-align: center;
+  text-align: center;
 }
-
-.content{
-    width:100%;
-    display: flex;
-    justify-content: center;
-    margin: auto;
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
 }
-
 ul {
-    display: flex; /* flexbox */
-    flex-wrap: wrap; /* 折返し指定 */
-    padding:0 10px;
+  display: flex; /* flexbox */
+  flex-wrap: wrap; /* 折返し指定 */
+  padding: 0 10px;
 }
-
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
-
 a:hover {
-    opacity:0.5;
+  opacity: 0.5;
 }
-
-h5{
-    margin: 20px auto;
+h5 {
+  margin: 20px auto;
 }
-
 section li {
-    display: inline-block;
-    width:30%;
-    padding: 0;
-    border: 1px solid gray;
-    border-radius: 10px;
-    text-align: center;
-    margin: 10px auto;
+  display: inline-block;
+  width: 30%;
+  padding: 0;
+  border: 1px solid gray;
+  border-radius: 10px;
+  text-align: center;
+  margin: 10px auto;
 }
 @media screen and (max-width: 480px) {
-    section li {
-        width:44%;
-    }
+  section li {
+    width: 44%;
+  }
 }
 section p {
-    text-align: left;
-    margin:10px 10px;
+  text-align: left;
+  margin: 10px 10px;
 }
-
 .main-visual {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
-
 .text-center {
+  text-align: center;
+}
+.link {
     text-align: center;
 }
-
